--- a/sample_size.ipynb
+++ b/sample_size.ipynb
@@ -5,7 +5,7 @@
    "id": "85af3c06",
    "metadata": {},
    "source": [
-    "# Расчет минимального размера выборки"
+    "# Расчет минимального размера выборок для A/B-теста"
    ]
   },
   {
@@ -13,10 +13,10 @@
    "id": "75264862",
    "metadata": {},
    "source": [
-    "У нас есть данные по транзакциям пользователей. Мы хотим провести a/b-тест относительно продаж (gmv), двусторонний тест. Какое минимальное число пользователей необходимо взять в эксперимент, если мы хотим иметь:\n",
+    "У нас есть данные по транзакциям пользователей. Мы хотим провести a/b-тест относительно продаж (gmv). Тест двусторонний. Какое минимальное число пользователей необходимо взять в эксперимент, если мы хотим иметь:\n",
     "- уровень значимости не более 5%;\n",
     "- мощность не менее 80%;\n",
-    "- минимальный эффекс, который мы хотим зарегистрировать - 1%.\n",
+    "- минимальный эффекс, который мы хотим зарегистрировать - 1%?\n",
     "\n",
     "Хотим разбиение теста и контроля - 1:3.  \n",
     "Будем предполагать, что дисперсии в обеих группах одинаковые."
@@ -24,7 +24,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 1,
    "id": "d34f61f7",
    "metadata": {},
    "outputs": [],
@@ -55,7 +55,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "id": "d238f48a",
    "metadata": {},
    "outputs": [
@@ -123,7 +123,7 @@
        "4  guo0pdwqvg  760"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -135,7 +135,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 3,
    "id": "518f114e",
    "metadata": {},
    "outputs": [
@@ -147,7 +147,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -158,7 +158,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "id": "013c82d3",
    "metadata": {},
    "outputs": [
@@ -198,7 +198,7 @@
    "id": "d2fae1b6",
    "metadata": {},
    "source": [
-    "## Расчет размера выборки"
+    "## Расчет размера выборок"
    ]
   },
   {
@@ -206,12 +206,12 @@
    "id": "0ce01f1e",
    "metadata": {},
    "source": [
-    "Посчитаем \"поюзерные\" среднюю и дисперсию на основе имеющихся данных:"
+    "Посчитаем \"поюзерные\" продажи на основе имеющихся данных, а затем вычислим их среднюю и дисперсию:"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 5,
    "id": "d7da3912",
    "metadata": {},
    "outputs": [
@@ -224,15 +224,15 @@
        " dtype: float64)"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "mean_df = df.groupby('user_id').sum().mean()\n",
-    "var_df = df.groupby('user_id').sum().var()\n",
-    "mean_df, var_df"
+    "mean_metric = df.groupby('user_id').sum().mean()\n",
+    "var_metric = df.groupby('user_id').sum().var()\n",
+    "mean_metric, var_metric"
    ]
   },
   {
@@ -249,20 +249,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 6,
    "id": "eb9b464e",
    "metadata": {},
    "outputs": [],
    "source": [
     "def control_group_size(var_df, effect, k = 1, alpha = 0.05, beta = 0.2):\n",
     "    \"\"\"вычисляет минимальный объем контрольной группы\"\"\"\n",
-    "    dist = sps.norm(loc=0, scale=1)  # z-распределение\n",
+    "    dist = sps.norm(loc=0, scale=1)  # стандартное z-распределение\n",
     "    return ((dist.ppf(1 - alpha/2) + dist.ppf(1- beta))**2) * (1 + k) * var_df / effect**2"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": null,
    "id": "480c1e28",
    "metadata": {},
    "outputs": [
@@ -270,16 +270,16 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "В тестовой группе должно быть 50427 пользователей, \n",
-      "В контрольной группе должно быть 151280 пользователей, \n",
-      "Всего - 201707 пользователей\n"
+      "В тестовой группе должно быть 5603 пользователей, \n",
+      "В контрольной группе должно быть 16809 пользователей, \n",
+      "Всего - 22412 пользователей\n"
      ]
     }
    ],
    "source": [
-    "effect = mean_df * 0.01  # mde в 1% мы хотим увидеть\n",
+    "effect = mean_metric * 0.03  # mde в 3% мы хотим увидеть\n",
     "k = 3  # отношение объема контрольной группы к тестовой\n",
-    "m = control_group_size(var_df, effect, k = k)  # объем контрольной группы\n",
+    "m = control_group_size(var_metric, effect, k = k)  # объем контрольной группы\n",
     "n = m / k  # объем тестовой группы\n",
     "print(\n",
     "        f'В тестовой группе должно быть {ceil(n.iloc[0])} пользователей, \\n'\\\n",
